# ros2_mega

./: .gitignore  PLAN.md  README.md
src/camera/: CMakeLists.txt  README.md  package.xml
src/camera/config/: camera_params.yaml
src/camera/launch/: camera.launch.py
src/camera/src/: camera_node.cpp
src/custom_interfaces/: CMakeLists.txt  README.md  package.xml
src/custom_interfaces/msg/: DetectedCube.msg  DetectedCubes.msg
src/robot_controller/: CMakeLists.txt  README.md  package.xml
src/robot_controller/launch/: robot_controller.launch.py
src/robot_controller/src/: robot_controller_node.cpp
src/task_manager/: CMakeLists.txt  README.md  package.xml
src/task_manager/config/: fixed_positions.yaml
src/task_manager/launch/: bringup.launch.py
src/task_manager/src/: task_manager_node.cpp
src/ur_cube_pointer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ur_cube_pointer/config/: camera_params.yaml  home_position.yaml  robot_params.yaml
src/ur_cube_pointer/launch/: bringup.launch.py  camera.launch.py  camera_pipeline.launch.py  move_to_home.launch.py
src/ur_cube_pointer/rviz/: cube_detection.rviz
src/ur_cube_pointer/src/: camera_node.cpp  task_manager.cpp
src/ur_cube_pointer/ur_cube_pointer/: camera_node.py
src/ur_cube_pointer/ur_cube_pointer/camera_node/: __init__.py  camera_node.py  cube_detection.py
src/ur_cube_pointer/ur_cube_pointer/robot_controller_node/: move_to_position.py  robot_controller_node.py
src/ur_cube_pointer/ur_cube_pointer/task_manager_node/: task_manager_node.py
src/ur_cube_pointer/urdf/: placeholder.urdf
src/ur_moveit_test/: CMakeLists.txt  README.md  package.xml
src/ur_moveit_test/launch/: robot_controller.launch.py
src/ur_moveit_test/src/: robot_controller_node.cpp
